# lak

./: .wtp.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  lefthook.yml  mise.toml  release-please-config.json
.context/: SPEC.md  (+1 more)
compiler/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  linker.rs  main.rs  parser.rs  token.rs
compiler/src/ast/: AGENTS.md  expr.rs  mod.rs  program.rs  stmt.rs  tests.rs  types.rs
compiler/src/codegen/: AGENTS.md  CLAUDE.md  binding.rs  builtins.rs  error.rs  expr.rs  mod.rs  stmt.rs  target.rs  tests.rs
compiler/src/diagnostics/: AGENTS.md  mod.rs
compiler/src/driver/: AGENTS.md  link.rs  mod.rs
compiler/src/lexer/: AGENTS.md  CLAUDE.md  cursor.rs  error.rs  mod.rs  skip.rs  tests.rs  tokens.rs
compiler/src/parser/: AGENTS.md  CLAUDE.md  error.rs  expr.rs  fn_def.rs  helpers.rs  import.rs  mod.rs  stmt.rs  tests.rs  types.rs
compiler/src/resolver/: AGENTS.md  error.rs  mod.rs
compiler/src/semantic/: AGENTS.md  CLAUDE.md  error.rs  mod.rs  module_table.rs  symbol.rs  symbols.rs  tests.rs  typecheck_expr.rs  typecheck_stmt.rs
compiler/tests/: AGENTS.md  CLAUDE.md  e2e_any.rs  e2e_arithmetic.rs  e2e_basic.rs  e2e_bool.rs  e2e_build.rs  e2e_comparison.rs  e2e_functions.rs  e2e_if_else.rs  e2e_if_expression.rs  e2e_imports.rs  e2e_modules.rs  e2e_panic.rs  e2e_run.rs  e2e_strings.rs  e2e_variables.rs  e2e_visibility.rs  e2e_while.rs  errors_codegen.rs  errors_lex.rs  errors_modules.rs  errors_parse.rs  errors_semantic.rs  integration.rs  pipeline.rs
(+144 files in other folders)
